# node-providers

./: .gitignore  Cargo.toml  README.md  node-operator.json  node-providers.toml  node_providers.json
frontend/: .gitignore  README.md  canister_ids.json  dfx.json  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/app/: Graph.tsx  GraphContainer.tsx  graphData.ts  layout.tsx  page.module.css  page.tsx  types.ts
frontend/src/lib/: graph.ts  login.ts
frontend/src/lib/icons/: ArrowIcon.svelte  ErrorIcon.svelte  SuccessIcon.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  combined_providers.json  stake.json
frontend/src/routes/graph/: +page.svelte
frontend/static/: manifest.json  sitemap.xml
frontend/static/.well-known/: ic-domains
frontend2/: index.html  package-lock.json  package.json
frontend2/src/: index.tsx
frontend2/src/pages/Home/: Graph.tsx  index.tsx  style.css  types.ts
frontend3/: canister_ids.json  dfx.json  package-lock.json  package.json
frontend3/src/app/: Graph.tsx  graphData.ts  page.tsx
frontend3/src/app/hooks/: useWindowSize.ts
np-tool/: Cargo.toml  combined_providers.json  node-providers.toml  node_providers-wiki.toml  node_providers.json
np-tool/src/: accounts.json  addresses.rs  helper.rs  icp.rs  icpswap.json  main.rs  np_list.json  tracked_principals.json  transactions.rs
np-tool/src/addresses/: exchanges.rs  foundation.rs  identified.rs  mod.rs  node_providers.rs  snses.rs  spammers.rs  suspects.rs
src/: main.rs
