[package]
name = "node-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
litemap = "0.7.3"                                  # Explicitly pin to a compatible version
zerofrom = "0.1.4"                                 # Explicitly pin to a compatible version
