[package]
name = "node-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.6.2", features = ["cors"] }
walkdir = "2.5.0"
axum = "0.8.1"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
