[package]
name = "np-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
candid = "0.10.13"
hex = "0.4.3"
ic-agent = "0.40.0"
ring = "0.17.14"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.7.6"
